nginx/k8s/nginx-deployment-pods-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-pods-service  # Service Name
spec:
  selector:
    app: nginx-deployment-pods    # Require Pods' labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP     # referring within k8s cluster, check with URL: http://nginx-deployment-service
  #type: NodePort     # Port on work node, use 'minikube service nginx-deployment-service --url' to get IP:Port for accessing from where minikube is running
