nginx/k8s/nginx-pod-rs.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-alpine-np
spec:
  type: NodePort
  ports:
  - port: 80    # 用 kubectl get service 查看自动分配的端口后，lynx localhost:端口号 可查看。
    protocol: TCP
  selector:
    app: nginx-alpine

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-alpine-lb
spec:
  type: LoadBalancer # 用 lynx localhost 即可访问
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-alpine
