nginx/k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-alpine
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector: # 需要对应的 label
    app: nginx-alpine
